# ROKO__

./: .config  99-limine-installkernel.sh  Disable askpass broadcast messages  README  README.md  ROKO__-repositories.xml  archlinux-improve_fonts.txt  calculate-usb-creator  calculate-usb-creator-bg  calculate-usb-creator-bg-r1.patch  calculate-usb-creator.xz  chieftec-aps-650c.txt  country.py  ddflash-gui  deadbeef-1.8.0.ebuild  deadbeef_np.py  disk_space_check_clean.py  dreaman-e-glupak.txt  firefox-100.txt  fstrim  gargoyle2stock-tl-wr740n.txt  grml-zshrc-moded  imagemagick-backend  imagemagick-zenity  ip.txt  libchardet-1.0.4.tar.bz2  make.conf  mellowplayer-flatpak.txt  messages.xz  multipletail.zsh  n0kS-e-gei  nvidia-kernel-6.0.patch  nvidiafixandrun.sh  paludis.tar.xz  portage-notify  portage-update  radeonfan.tar.bz2  samsung-firmware-updater.sh  swaret-patch-for-slackware-14.diff  sysctl.conf  (+6 more)
.svn/: all-wcprops  entries
amdgpu-fan-control/: gpu-profile-switcher  gpu-profile-switcher.service  lact-auto-switch.service  lact_auto_game_switch_new.sh
cachyos-sources/: cachyos-sources-6.3.4.ebuild  metadata.xml
cl-console-bg/: console-gui.po  console.po  core.po  install.po  lib.po
nixnote-2.1.6/work/nixnote2-2.1.6/src/qevercloud/QEverCloud/: CMakeLists.txt
nixnote-2.1.6/work/nixnote2-2.1.6/src/qevercloud/QEverCloud/cmake/modules/: QEverCloudConfig.cmake.in  QEverCloudConfigVersion.cmake.in  QEverCloudFindQt4Dependencies.cmake  QEverCloudFindQt4DependenciesWithWebKit.cmake  QEverCloudFindQt5DependenciesWebEngineCore.cmake  QEverCloudFindQt5DependenciesWebEngineNoCore.cmake  QEverCloudSetupQt.cmake
nixnote-2.1.6/work/nixnote2-2.1.6/src/qevercloud/QEverCloud/headers/: VersionInfo.h
nixnote-2.1.6/work/nixnote2-2.1.6/src/qevercloud/QEverCloud/src/: globals.cpp  http.cpp  oauth.cpp
nixnote2-2.1.6/: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  changelog.txt  nixnote2.desktop  shortcuts.txt  themes.ini
nixnote2-2.1.6/debian/: rules
nixnote2-2.1.6/development/: copy-to-import-folder.sh  create-build-version.sh  run-tests.sh
nixnote2-2.1.6/development/patches/: README.txt
nixnote2-2.1.6/development/pkgconfig/: tidy.pc
nixnote2-2.1.6/docs/: DOCKER-README.md  technical-notes.md
nixnote2-2.1.6/help/: about.html
nixnote2-2.1.6/resources/images/: NixNote2.icns
nixnote2-2.1.6/src/: application.cpp  global.h  nixnote.h
nixnote2-2.1.6/src/cmdtools/: addnote.cpp  alternote.cpp  cmdlinequery.cpp  extractnotes.cpp  extractnotetext.cpp
nixnote2-2.1.6/src/communication/: communicationerror.cpp  communicationerror.h  communicationmanager.cpp  communicationmanager.h
nixnote2-2.1.6/src/dialog/: aboutdialog.cpp  accountdialog.cpp  accountmaintenancedialog.cpp  accountmaintenancedialog.h  adduseraccountdialog.cpp  closenotebookdialog.cpp  databasestatus.cpp  insertlatexdialog.cpp  insertlinkdialog.cpp  locationdialog.cpp  locationdialog.h  remindersetdialog.cpp  tabledialog.cpp  watchfolderadd.cpp  watchfolderdialog.h
nixnote2-2.1.6/src/dialog/preferences/: debugpreferences.cpp  emailpreferences.cpp  exitpreferences.cpp  localepreferences.cpp  preferencesdialog.cpp  searchpreferences.h  syncpreferences.cpp  thumbnailpreferences.cpp
nixnote2-2.1.6/src/email/: mimepart.cpp  smtpclient.cpp
nixnote2-2.1.6/src/filters/: filterengine.h  lenseresults.h  notesortfilterproxymodel.cpp  remotequery.h
nixnote2-2.1.6/src/gui/: datedelegate.cpp  externalbrowse.cpp  favoritesviewdelegate.cpp  flowlayout.cpp  lineedit.h  nattributetree.cpp  nbrowserwindow.h  nmainmenubar.cpp  nnotebookviewitem.cpp  ntableview.cpp  ntableview.h  ntabwidget.cpp  ntabwidget.h  ntagview.cpp  nwebview.cpp  nwebview.h  traymenu.cpp  widgetpanel.cpp  widgetpanel.h
nixnote2-2.1.6/src/gui/browserWidgets/: dateeditor.cpp  dateeditor.h  datetimeeditor.cpp  datetimeeditor.h  editorbuttonbar.h  locationeditor.cpp  ntitleeditor.cpp  ntitleeditor.h  tageditor.h
nixnote2-2.1.6/src/gui/browserWidgets/table/: tablepropertiesdialog.cpp
nixnote2-2.1.6/src/gui/plugins/: pluginfactory.cpp  popplergraphicsview.cpp  popplerviewer.cpp
nixnote2-2.1.6/src/html/: NoteFormatterBase.cpp  NoteFormatterBase.h  attachmenticonbuilder.cpp  enmlformatter.cpp  enmlformatter.h  noteformatter.cpp  noteformatter.h  tagscanner.cpp  thumbnailer.cpp
nixnote2-2.1.6/src/hunspell/: spellchecker.h
nixnote2-2.1.6/src/logger/: qsdebugoutput.cpp  qslog.cpp  qslog.h
nixnote2-2.1.6/src/models/: notecache.h  notemodel.h
nixnote2-2.1.6/src/qevercloud/: !README-nixnote2.md  CHANGELOG.md  CMakeLists.txt  README.md
nixnote2-2.1.6/src/qevercloud/QEverCloud/cmake/modules/: QEverCloudBuildTreeSettings.cmake.in  QEverCloudCMakePolicies.cmake  QEverCloudCompilerSettings.cmake  QEverCloudDoxygen.cmake  QEverCloudFindPackageWrapperMacro.cmake  QEverCloudFindQt5DependenciesCore.cmake  QEverCloudFindQt5DependenciesWebKit.cmake
nixnote2-2.1.6/src/qevercloud/QEverCloud/headers/: globals.h
nixnote2-2.1.6/src/qevercloud/QEverCloud/src/tests/: TestQEverCloud.cpp
nixnote2-2.1.6/src/quentier/utility/: StringUtils_p.cpp  StringUtils_p.h
nixnote2-2.1.6/src/reminders/: reminderevent.cpp  remindermanager.h
nixnote2-2.1.6/src/settings/: accountsmanager.h  colorsettings.cpp  filemanager.cpp  filemanager.h  startupconfig.cpp  startupconfig.h
nixnote2-2.1.6/src/sql/: configstore.h  databaseconnection.cpp  filewatchertable.cpp  filewatchertable.h  linkednotebooktable.cpp  notebooktable.cpp  notebooktable.h  nsqlquery.cpp  nsqlquery.h  resourcetable.cpp  resourcetable.h  searchtable.cpp  sharednotebooktable.cpp  sharednotebooktable.h  tagtable.cpp  usertable.h
nixnote2-2.1.6/src/threads/: browserrunner.h  counterrunner.h  indexrunner.h  syncrunner.h
nixnote2-2.1.6/src/utilities/: crossmemorymapper.h  debugtool.cpp
nixnote2-2.1.6/src/watcher/: filewatchermanager.h
nixnote2-2.1.6/src/xml/: batchimport.cpp  exportdata.cpp  importdata.cpp  importdata.h  importenex.h
nixnote2-2.1.6/translations/: nixnote2_ca.ts  nixnote2_da.ts  nixnote2_en_GB.ts  nixnote2_es.ts  nixnote2_pl.ts  nixnote2_pt.ts  nixnote2_zh_CN.ts
zsh/: zshrc
(+3727 files in other folders)
